<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_add_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">


    <LinearLayout
        android:id="@+id/window_add_note"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/note_bg_layout"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_add_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="Note"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/add_note_text_bg"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/note_text_bg_layout"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

            <EditText
                android:id="@+id/edt_note_text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/note_text_cursor_color"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/note_bg_layout"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/note_bg_layout"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="12sp"
                        android:hint="@string/source"/>

                    <EditText
                        android:id="@+id/edt_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/tag"
                        android:textSize="12sp" />

                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_add_note"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/note_button_bg_layout"
            android:text="@string/add_update"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>
</RelativeLayout>